--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
   "python.testing.nosetestArgs": [
     "tests"
   ],
-  "python.testing.pytestEnabled": false,
+  "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
-  "python.testing.nosetestsEnabled": true
+  "python.testing.nosetestsEnabled": true,
+  "python.testing.pytestArgs": [
+    "."
+  ]
 }
